--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -335,9 +335,7 @@
 \input{Ch3-CNN/Chapter3.tex}
 \input{Ch4-RNN/Chapter4.tex}
 \input{Ch5-SOM/Chapter5.tex}
-%\input{Ch6-RuntimeCtrl/main.tex}
-%\input{Ch7-CaseStudies/main.tex}
-%\input{Ch8-Conclusion/main.tex}
+\input{Ch6-Conclusion/Chapter6.tex}
 %\input{appendix}
 
 
